--- a/app/src/main/res/layout/dialog_chongzhi_app.xml
+++ b/app/src/main/res/layout/dialog_chongzhi_app.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView7"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="捡豆子App下载"
+        android:text="话费优惠充值"
         android:textColor="@color/color_white"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -27,7 +27,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="浏览器扫描二维码下载APP"
+        android:text="请使用微信扫码"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
@@ -39,41 +42,18 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:src="@drawable/download"
+        android:src="@drawable/img_chongzhima"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_colse"
+        android:id="@+id/btn_save"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:gravity="center"
-        android:paddingLeft="12dp"
-        android:paddingTop="5dp"
-        android:paddingRight="12dp"
-        android:paddingBottom="5dp"
-        android:text="关闭"
-        android:textAppearance="?android:attr/textAppearanceLargeInverse"
-        android:textColor="#ffffff"
-        android:textSize="14sp"
-        app:cornerRadius="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_copy"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_copy"
-        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/colorPrimary"
         android:gravity="center"
@@ -81,13 +61,14 @@
         android:paddingTop="5dp"
         android:paddingRight="12dp"
         android:paddingBottom="5dp"
-        android:text="复制链接"
+        android:text="保存二维码到相册"
         android:textAppearance="?android:attr/textAppearanceLargeInverse"
         android:textColor="#ffffff"
         android:textSize="14sp"
         app:cornerRadius="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn_colse"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
