--- a/app/src/main/res/layout/activity_set_recommend_code.xml
+++ b/app/src/main/res/layout/activity_set_recommend_code.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -53,8 +52,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/tv_indo"
@@ -142,8 +140,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/edit_input_jinritoutiao"
                 app:layout_constraintTop_toBottomOf="@+id/edit_input_yaoqingma" />
-
-
 
 
             <TextView
