--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -58,8 +58,7 @@
                 android:textColor="#ffffff"
                 android:gravity="center"
                 android:backgroundTint="@color/colorPrimary"
-                app:cornerRadius="4dp"
-                />
+                app:cornerRadius="4dp" />
 
         </RelativeLayout>
 
