--- a/app/src/main/res/layout/fragment_mainpage.xml
+++ b/app/src/main/res/layout/fragment_mainpage.xml
@@ -9,8 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="16dp"
-        >
+        android:paddingBottom="16dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/f_view"
