增加暂停跳转下一个任务

--- a/app/src/main/res/layout/fragment_coupon.xml
+++ b/app/src/main/res/layout/fragment_coupon.xml
@@ -111,9 +111,9 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:visibility="gone"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            android:visibility="gone"
             app:cardCornerRadius="4dp"
             app:cardElevation="1dp"
             app:layout_constraintEnd_toStartOf="@+id/f_view4"
@@ -130,7 +130,7 @@
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:layout_marginStart="16dp"
-                    android:src="@drawable/meituan"
+                    android:src="@drawable/icon_taobao"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -139,8 +139,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="领淘宝\n优惠券"
-                    android:textColor="#FEC21F"
+                    android:text="领淘宝\n购物优惠券"
+                    android:textColor="#fc8848"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -159,8 +159,8 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="12dp"
             android:clickable="true"
-            android:visibility="gone"
             android:foreground="?android:attr/selectableItemBackground"
+            android:visibility="gone"
             app:cardCornerRadius="4dp"
             app:cardElevation="1dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -177,7 +177,7 @@
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:layout_marginStart="16dp"
-                    android:src="@drawable/eleme"
+                    android:src="@drawable/icon_jingdong1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -186,8 +186,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="领京东\n优惠券"
-                    android:textColor="#1682E6"
+                    android:text="领京东\n购物优惠券"
+                    android:textColor="#f53415"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
