--- a/app/src/main/res/layout/fragment_mainpage.xml
+++ b/app/src/main/res/layout/fragment_mainpage.xml
@@ -15,9 +15,9 @@
             android:id="@+id/f_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
             android:visibility="visible"
@@ -69,8 +69,8 @@
             android:id="@+id/f_view3"
             android:layout_width="0dp"
             android:layout_height="80dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
@@ -101,23 +101,23 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="微信\n红包助手"
+                    android:textColor="#1AB20A"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:textColor="#1AB20A"
-                    app:layout_constraintStart_toEndOf="@+id/img_wx"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/img_wx"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tv_wx_statue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="未开启"
-                    android:textSize="10sp"
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="4dp"
+                    android:text="未开启"
                     android:textColor="#1AB20A"
+                    android:textSize="10sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -129,8 +129,8 @@
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="4dp"
@@ -160,12 +160,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="QQ\n红包助手"
+                    android:textColor="#E43921"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:textColor="#E43921"
-                    app:layout_constraintStart_toEndOf="@+id/img_qq"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/img_qq"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -176,9 +176,9 @@
             android:id="@+id/newTaskCardView"
             android:layout_width="0dp"
             android:layout_height="150dp"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginEnd="16dp"
             android:background="#fff"
             android:visibility="gone"
             app:cardCornerRadius="4dp"
@@ -226,9 +226,9 @@
             android:id="@+id/listCardView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginEnd="16dp"
             android:background="#fff"
             android:visibility="visible"
             app:cardCornerRadius="4dp"
@@ -263,12 +263,12 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="12dp"
                     android:background="@drawable/shape_round_corner"
+                    android:drawableLeft="@drawable/add"
+                    android:drawablePadding="2dp"
                     android:gravity="center"
                     android:paddingLeft="4dp"
                     android:paddingRight="4dp"
                     android:text="添加任务"
-                    android:drawableLeft="@drawable/add"
-                    android:drawablePadding="2dp"
                     android:textColor="@color/color_white"
                     android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -318,17 +318,20 @@
 
         <TextView
             android:id="@+id/tv_describe"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:gravity="bottom"
+            android:background="@drawable/text_underline_green"
+            android:gravity="center"
             android:lineSpacingExtra="4sp"
-            android:text="使用说明"
+            android:padding="4dp"
+            android:text="软件咋用？查看介绍"
             android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
+            android:textSize="12sp"
+            android:textStyle="bold"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -336,162 +339,19 @@
 
 
         <TextView
-            android:id="@+id/tv_describe_one"
+            android:id="@+id/tv_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:gravity="bottom"
-            android:lineSpacingExtra="4sp"
-            android:text="1、如何打开捡豆子无障碍服务？"
-            android:textColor="#7b7c98"
-            android:textSize="12sp"
-            android:visibility="visible"
+            android:layout_marginTop="16dp"
+            android:text="【捡豆子助手完全免费，如遇到售卖请举报！】"
+            android:textColor="#50000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_describe" />
-
-        <TextView
-            android:id="@+id/tv_describe_one_info"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:lineSpacingExtra="4sp"
-            android:text="查看示例操作"
-            android:textColor="@color/warning"
-            android:textSize="12sp"
-            android:visibility="visible"
-            android:background="@drawable/text_underline"
-            app:layout_constraintStart_toEndOf="@+id/tv_describe_one"
-            app:layout_constraintTop_toTopOf="@+id/tv_describe_one" />
-
-
-        <TextView
-            android:id="@+id/tv_describe_two"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:gravity="bottom"
-            android:lineSpacingExtra="4sp"
-            android:text="2、如果提示无法获取界面信息怎么办?"
-            android:textColor="#7b7c98"
-            android:textSize="12sp"
-            android:visibility="visible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_describe_one" />
-
-        <TextView
-            android:id="@+id/tv_describe_two_info"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:lineSpacingExtra="4sp"
-            android:text="查看解决办法"
-            android:textColor="@color/warning"
-            android:textSize="12sp"
-            android:visibility="visible"
-            android:background="@drawable/text_underline"
-            app:layout_constraintStart_toEndOf="@+id/tv_describe_two"
-            app:layout_constraintTop_toTopOf="@+id/tv_describe_two" />
-
-        <TextView
-            android:id="@+id/tv_describe_thire"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:gravity="bottom"
-            android:lineSpacingExtra="4sp"
-            android:text="3、如何收益最大化？"
-            android:textColor="#7b7c98"
-            android:textSize="12sp"
-            android:visibility="visible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_describe_two" />
-
-        <TextView
-            android:id="@+id/tv_describe_thire_info"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:lineSpacingExtra="4sp"
-            android:text="查看示例操作"
-            android:textColor="@color/warning"
-            android:textSize="12sp"
-            android:visibility="visible"
-            android:background="@drawable/text_underline"
-            app:layout_constraintStart_toEndOf="@+id/tv_describe_thire"
-            app:layout_constraintTop_toTopOf="@+id/tv_describe_thire" />
-
-        <TextView
-            android:id="@+id/tv_describe_four"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:gravity="bottom"
-            android:lineSpacingExtra="4sp"
-            android:text="4、软件为什么在截图？"
-            android:textColor="#7b7c98"
-            android:textSize="12sp"
-            android:visibility="visible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_describe_thire" />
-
-        <TextView
-            android:id="@+id/tv_describe_four_info"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:lineSpacingExtra="4sp"
-            android:text="查看原因"
-            android:textColor="@color/warning"
-            android:textSize="12sp"
-            android:visibility="visible"
-            android:background="@drawable/text_underline"
-            app:layout_constraintStart_toEndOf="@+id/tv_describe_four"
-            app:layout_constraintTop_toTopOf="@+id/tv_describe_four" />
-
-        <TextView
-            android:id="@+id/tv_describe_end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="16dp"
-            android:gravity="bottom"
-            android:lineSpacingExtra="4sp"
-            android:text="5、遇到问题，或了解更多极致薅法请联系？"
-            android:textColor="#7b7c98"
-            android:textSize="12sp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_describe_four" />
-
-        <TextView
-            android:id="@+id/tv_describe_end_info"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:lineSpacingExtra="4sp"
-            android:text="加入捡豆子党"
-            android:textColor="@color/warning"
-            android:textSize="12sp"
-            android:visibility="visible"
-            android:background="@drawable/text_underline"
-            app:layout_constraintStart_toEndOf="@+id/tv_describe_end"
-            app:layout_constraintTop_toTopOf="@+id/tv_describe_end" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
