--- a/app/src/main/res/layout/fragment_coupon.xml
+++ b/app/src/main/res/layout/fragment_coupon.xml
@@ -23,7 +23,7 @@
             app:cardElevation="1dp"
             app:layout_constraintEnd_toStartOf="@+id/f_view2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_chongzhi">
+            app:layout_constraintTop_toBottomOf="@+id/img_movi">
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -70,7 +70,7 @@
             app:cardElevation="1dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/f_view1"
-            app:layout_constraintTop_toBottomOf="@+id/img_chongzhi">
+            app:layout_constraintTop_toBottomOf="@+id/img_movi">
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -205,10 +205,22 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:src="@drawable/img_chongzhi"
+            android:background="@drawable/img_chongzhi"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/img_movi"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/img_movi"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_chongzhi" />
 
         <!--<androidx.cardview.widget.CardView-->
         <!--android:layout_width="0dp"-->
