微信红包助手优化

--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -107,12 +107,12 @@
             android:drawableLeft="@drawable/icon_invite"
             android:drawablePadding="12dp"
             android:gravity="center_vertical"
-            android:text="推荐码"
+            android:text="填写邀请码"
             android:textAppearance="?android:attr/textAppearanceLargeInverse"
             android:textColor="@color/color_text"
             android:textSize="14sp"
             android:textStyle="bold"
-            android:visibility="gone"
+            android:visibility="visible"
             app:cornerRadius="4dp"
             app:layout_constraintEnd_toStartOf="@+id/btn_set_code"
             app:layout_constraintStart_toStartOf="parent"
@@ -128,12 +128,12 @@
             android:drawableLeft="@drawable/icon_recommend"
             android:drawablePadding="12dp"
             android:gravity="center_vertical"
-            android:text="推荐赚钱"
+            android:text="分享好友"
             android:textAppearance="?android:attr/textAppearanceLargeInverse"
             android:textColor="@color/color_text"
             android:textSize="14sp"
             android:textStyle="bold"
-            android:visibility="gone"
+            android:visibility="visible"
             app:cornerRadius="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_recommend"
