--- a/app/src/main/res/layout/dialog_input_recommend.xml
+++ b/app/src/main/res/layout/dialog_input_recommend.xml
@@ -18,6 +18,9 @@
         android:textColor="@color/color_text"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:singleLine="true"
+        android:maxLength="8"
+        android:maxEms="8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
