debug包增加跳过任务功能

--- a/app/src/main/res/layout/fragment_mainpage.xml
+++ b/app/src/main/res/layout/fragment_mainpage.xml
@@ -365,5 +365,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_describe" />
 
+        <Button
+            android:id="@+id/btn_skip_task"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="跳过当前任务"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_describe" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
