--- a/app/src/main/res/layout/fragment_mainpage.xml
+++ b/app/src/main/res/layout/fragment_mainpage.xml
@@ -22,7 +22,7 @@
             android:foreground="?android:attr/selectableItemBackground"
             android:visibility="visible"
             app:cardCornerRadius="4dp"
-            app:cardElevation="2dp"
+            app:cardElevation="1dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -41,7 +41,7 @@
                     android:drawablePadding="12dp"
                     android:text="请先点击此处，去激活无障碍权限"
                     android:textColor="#000000"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -51,9 +51,9 @@
                     android:id="@+id/textView3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="12dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginEnd="12dp"
                     android:layout_marginBottom="12dp"
                     android:text="脚本点击及判断按钮位置需要辅助服务提供支持，用于分析界面层次并用于判断按钮位置。"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -74,6 +74,7 @@
             android:layout_marginEnd="8dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            android:visibility="gone"
             app:cardCornerRadius="4dp"
             app:cardElevation="1dp"
             app:layout_constraintEnd_toStartOf="@+id/f_view4"
@@ -133,6 +134,7 @@
             android:layout_marginEnd="16dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            android:visibility="gone"
             app:cardCornerRadius="4dp"
             app:cardElevation="1dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -194,7 +196,7 @@
             android:background="#fff"
             android:visibility="gone"
             app:cardCornerRadius="4dp"
-            app:cardElevation="1dp"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/f_view3">
@@ -258,15 +260,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12dp"
-                    android:layout_marginEnd="8dp"
-                    android:text="金币提现任务"
+                    android:text="自动刷金币任务"
                     android:textColor="#000000"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_add_task"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/tv_add_task" />
+
 
                 <TextView
                     android:id="@+id/tv_add_task"
@@ -286,11 +287,29 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <TextView
+                    android:id="@+id/tv_clear_task"
+                    android:layout_width="wrap_content"
+                    android:layout_height="28dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginRight="12dp"
+                    android:background="@drawable/shape_round_corner"
+                    android:drawableLeft="@drawable/un_add"
+                    android:drawablePadding="2dp"
+                    android:gravity="center"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:text="清空任务"
+                    android:textColor="@color/color_white"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toStartOf="@+id/tv_add_task"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <View
                     android:id="@+id/view_div"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="8dp"
                     android:background="#0A000000"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -307,9 +326,9 @@
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/startBtn"
                     android:layout_width="0dp"
-                    android:layout_height="64dp"
+                    android:layout_height="50dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
                     android:layout_weight="1"
@@ -318,9 +337,8 @@
                     android:text="一键执行任务"
                     android:textAppearance="?android:attr/textAppearanceLargeInverse"
                     android:textColor="#ffffff"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:cornerRadius="32dp"
+                    android:textSize="14sp"
+                    app:cornerRadius="25dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
